--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -4,26 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Reservations</title>
+    <title>Make Bookings</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-
-    <style>
-        .my-footer {
-            height: 5rem;
-            padding: 1rem;
-            background-color: #163b65;
-            margin-top: 1.5rem;
-            color: #FFF;
-            font-size: 80%;
-        }
-
-        .room-image {
-            max-width: 50%;
-
-        }
-    </style>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/css/datepicker.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/css/datepicker-bs5.min.css">
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+    <link rel="stylesheet" type="text/css" href="static/css/styles.css">
+  
 </head>
 
 <body>
@@ -68,37 +56,58 @@
     <div class="container">
 
         <div class="row">
-            <div class="col">
-             <h1>Make Reservation</h1>
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <h1 class="mt-5"> Search for Availability</h1>
+                <form action="reservation.html" method="get" novalidate class="needs-validation">
 
-                <form method="post" action="" class="needs-validation" novalidate>
+                    <!-- <div class="row">
+                        <div class="col">
+                        <!-- <div class="form-group"> -->
+                        <!-- <label for="start_date" class="form-label">Starting Date</label>
+                        <input required type="date" class="form-control" id="start_date" name="start_date" aria-describedby="startDateHelp">
+                        <div id="startDateHelp" class="form-text">Enter the starting date in the form of YYYY-MM-DD</div>
+                    <!-- </div> -->
+                    <!-- </div> --> 
 
-                    <div class="form-group mt-5 mb-3">
-                        <label for="first_name">First Name:</label>
-                        <input type="text" class= "form-control" required autocomplete="off" placeholder="First Name" name="first_name" id="first_name"/>
+                    <!-- <div class="col">
+                    <!-- <div class="form-group"> -->
+                            <!-- <label for="end_date" class="form-label">Ending Date</label>
+                            <input required type="date" class="form-control" id="end_date" name="end_date" aria-describedby="endDateHelp">
+                            <div id="endDateHelp" class="form-text">Enter the ending date in the form of YYYY-MM-DD</div>
+                        <!-- </div> -->
+                        <!-- </div> -->
+                    <!-- </div> --> 
+
+                    <div class="row">
+                        <div class="col">
+                    <div class="row" id="reservation-dates">
+                        <div class="col">
+                        <input type="text" placeholder="Arrival" class="form-control" name="start" required/>
+                        </div>
+                        <div class="col">
+                        <input type="text" placeholder="Departure"class="form-control" name="end" required/>
+                        </div>
+                    </div>
+                    </div>
                     </div>
 
-                    <div class="form-group mb-3">
-                        <label for="last_name">Last Name:</label>
-                        <input type="text" required class= "form-control" autocomplete="off" placeholder="Last Name" name="last_name" id="last_name"/>
-                     </div>
 
-                    <div class="form-group mb-3">
-                        <label for="email">Email:</label>
-                        <input type="email" required class= "form-control" autocomplete="off" placeholder="Email" name="email" id="email"/>
+                        <hr>
+                    <div class="d-grid gap-2 col-6 mx-auto">
+                    <button type="submit" class="btn btn-primary mt-2">Search Availability</button>
                     </div>
-
-                    <div class="form-group mb-3">
-                        <label for="phone">Phone Number:</label>
-                        <input type="text" required class= "form-control" autocomplete="off" placeholder="Phone Number" name="phone" id="phone"/>
-                    </div>
-
-                    <hr>
-
-                    <input type="submit" class="btn btn-primary" value="Make Reservation"/>
-
-
                 </form>
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <p id="myParagraph">This is some text.</p>
+                <p>
+                    <button id="colorButton" class="btn btn-outline-secondary">Click Me</button>
+                </p>
             </div>
         </div>
 
@@ -126,6 +135,165 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
         crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/js/datepicker-full.min.js"></script>
+        <script src="https://unpkg.com/notie"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script>
+            // console.log("I am printing from JavaScript");
+            let attention = Prompt();
+        (() => {
+                    'use strict'
+                    // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                    const forms = document.querySelectorAll('.needs-validation')
+
+                    // Loop over them and prevent submission
+                    Array.from(forms).forEach(form => {
+                        form.addEventListener('submit', event => {
+                            if (!form.checkValidity()) {
+                                event.preventDefault()
+                                event.stopPropagation()
+                            }
+
+                            form.classList.add('was-validated')
+                        }, false)
+                    });               
+                })()    
+
+        document.getElementById("colorButton").addEventListener("click", function(){               
+            // let myEl = document.getElementById("myParagraph");
+            // if(myEl.classList.contains("redText")){
+            //     myEl.classList.remove("redText");
+            // } else{
+            //     myEl.classList.add("redText");
+            // }
+            // notify("This is my message","warning")          
+        //    notifyModal('title','<em> Hello, world </em>','success','My text for the button')
+
+        let html =  `
+          <form id="check-availability-form" action="" class="needs-validation scroll-hide" method="post" novalidate>
+            <div class="row">
+                <div class="col">
+                    <div class="row" id="reservation-dates-modal">
+                        <div class="col">
+                           <input disabled class="form-control" type="text" name="start" id="start" placeholder="Arrival" required/>                            
+                        </div>
+                        <div class="col">
+                           <input disabled class="form-control" type="text" name="end" id="end" placeholder="Departure" required/>                            
+                        </div>
+                    </div>
+                </div>    
+            </div>
+          </form>
+        
+        `;
+        attention.custom({html, title:"Choose your dates"});
+        })
+
+        const elem = document.getElementById('reservation-dates');
+            const rangepicker = new DateRangePicker(elem, {
+                format: "yyyy-mm-dd",
+            });
+
+            function notify(type, text){
+                notie.alert({
+                    type,
+                    text
+                })
+            }
+
+            function notifyModal(title,html,icon, confirmButtonText='Cool'){
+                  Swal.fire({
+                    title,
+                    html,
+                    icon,
+                    confirmButtonText
+                });
+            }
+
+            function Prompt(){
+                let toast = function(c){
+                    const {title="", icon="success",position="top-end",}=c;
+                   const Toast = Swal.mixin({
+                        toast: true,
+                        title,
+                        position,
+                        icon,
+                        showConfirmButton: false,
+                        timer: 3000,
+                        timerProgressBar: true,
+                        didOpen: (toast) => {
+                            toast.addEventListener('mouseenter', Swal.stopTimer)
+                            toast.addEventListener('mouseleave', Swal.resumeTimer)
+                        }
+                    })
+
+                    Toast.fire({})
+                }
+
+                 let success = function (c) {
+                    // console.log("clicked button and got success");
+                    const{title="",text="",footer=""}=c;
+                    Swal.fire({
+                         icon: 'success',
+                         title,
+                         text,
+                         footer,                         
+                     });
+                }
+
+                     let error = function (c) {
+                    // console.log("clicked button and got success");
+                    const { title = "", text = "", footer = "" } = c;
+                    Swal.fire({
+                        icon: 'error',
+                        title,
+                        text,
+                        footer,
+                    });
+                }
+
+                async function custom(c){
+                    const{title="", html = ""}=c
+
+                   const { value: formValues } = await Swal.fire({
+                        title,
+                        html,
+                        backdrop:false,
+                        focusConfirm: false,
+                        showCancelButton: true,
+                        willOpen:()=>{
+                            const elem = document.getElementById('reservation-dates-modal')
+                            const rp= new DateRangePicker(elem,{
+                                format: 'yyyy-mm-dd',
+                                showOnFocus:true,
+                                orientation: 'top auto'
+                            })
+                        },
+                        preConfirm: () => {
+                            return [
+                                document.getElementById('start').value,
+                                document.getElementById('end').value
+                            ]
+                        },
+                        didOpen: () => {
+                            document.getElementById('start').removeAttribute('disabled');
+                            document.getElementById('end').removeAttribute('disabled');
+                        },
+                    })
+
+                    if (formValues) {
+                        Swal.fire(JSON.stringify(formValues))
+                    }
+                }
+
+                return {
+                    toast,
+                    success,
+                    error,
+                    custom
+                }
+            }
+        </script>
 
 </body>
 
