Converted HTML to TMPL

--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -102,14 +102,14 @@
             </div>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
             <div class="col">
                 <p id="myParagraph">This is some text.</p>
                 <p>
                     <button id="colorButton" class="btn btn-outline-secondary">Click Me</button>
                 </p>
             </div>
-        </div>
+        </div> -->
 
 
     </div>
